# LifeVectorBluetoothServer

./: BluetoothServerReadme.txt  README.md
LifeVectorServer/: ArchLib  ArchLibTest  ArchiveLibrary.cpp  ArchiveLibrary.h  ArchivedLocation.cpp  ArchivedLocation.h  CURLplusplus.cpp  CURLplusplus.h  CoordinateInformation.cpp  CoordinateInformation.h  DataDepositor.cpp  DataDepositor.h  Database.cpp  Database.h  Doxyfile  EncryptionModule.cpp  EncryptionModule.h  LocationInformation.cpp  LocationInformation.h  Makefile  RawDataRepository.cpp  RawDataRepository.h  ReportTest  SquasherTest  StringParser.h  SystemTimeManager.cpp  SystemTimeManager.h  TestFetch  UCTest  UserController.cpp  UserController.h  UserLibrary.cpp  UserLibrary.h  UserVisitInfo.cpp  UserVisitInfo.h  VisitLog.cpp  VisitLog.h  dox.config.bak  fetchReport.cpp  fetchReport.h  (+16 more)
LifeVectorServer/DBScripts/: create_db.sh  database_init  db_script.txt
LifeVectorServer/Test_Runners/: ALibTest.cpp  TestFetch  TestSquash.cpp  UserControllerTest  UserControllerTest.cpp  fetchTest.cpp  main.cpp  test_en.cpp  test_hash.cpp
LifeVectorServer/gatt-server/: Makefile  README.md  configure  configure.ac  server_init.sh
LifeVectorServer/gatt-server/init/: gobbledegook.conf
LifeVectorServer/gatt-server/src/: GattCharacteristic.cpp  GattCharacteristic.h  Makefile  Makefile.am  Makefile.in  Server.cpp  Server.h  ServerUtils.cpp  ServerUtils.h
